updating index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <h1>Ficha ADSO - Análisis y Desarrollo de Software</h1>
+        <h1>Ficha 3067454 - Análisis y Desarrollo de Software</h1>
         <nav>
             <button onclick="mostrarSeccion('inicio')">Inicio</button>
             <button onclick="mostrarSeccion('registro')">Registrar Asistencia</button>
